--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "reactive-elements",
-  "version": "0.10.0",
+  "name": "@christianmurphy/reactive-elements",
+  "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "use a React.js component as web component",
   "main": "dist/reactive-elements.cjs.js",
   "module": "dist/reactive-elements.esm.mjs",
