--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@christianmurphy/reactive-elements",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publishConfig": {
     "access": "public"
   },
@@ -10,10 +10,8 @@
   "source": "src/reactive-elements.js",
   "scripts": {
     "test": "npm run build && karma start",
-    "prettier-check":
-      "prettier '{src,demo,test}/**/*' '*.md' '*.js' 'package.json' --list-different",
-    "prettier-write":
-      "prettier '{src,demo,test}/**/*' '*.md' '*.js' 'package.json' --write",
+    "prettier-check": "prettier '{src,demo,test}/**/*' '*.md' '*.js' 'package.json' --list-different",
+    "prettier-write": "prettier '{src,demo,test}/**/*' '*.md' '*.js' 'package.json' --write",
     "build": "rollup -c"
   },
   "homepage": "https://github.com/PixelsCommander/ReactiveElements",
@@ -21,7 +19,12 @@
     "type": "git",
     "url": "https://github.com/PixelsCommander/ReactiveElements.git"
   },
-  "keywords": ["react", "web-components", "custom elements", "reactjs"],
+  "keywords": [
+    "react",
+    "web-components",
+    "custom elements",
+    "reactjs"
+  ],
   "author": {
     "name": "Denis Radin aka PixelsCommander",
     "email": "denis.radin@gmail.com",
